Changelog
=========

4.14-dev - (unreleased)
-----------------------
 * Bug fix: Fixed Content-Disposition for PDF files [voineali #4898]
 * Bug fix: fixed overlapping text in organisational chart and
            replaced deprecated css_slot with style_slot [demarant]
 * Change: Mark any Daviz presentation with Interactive Data interface. [demarant]
 * Bug fix: replaced attribute modifiedDate (introduced in r24888 and not found
            with new plone 4) with standard dublic core modified() method.
            [demarant #4875]

4.13 - (2012-01-10)
-------------------
 * Bug fix: added an override utility for p4a.videoembed that will not change
   Links with swf in their url into Videos [tiberich #4865]
 * Bug fix: Fixed portal status message on @@sendAsNotification
   [voineali #4706]
 * Bug fix: fixed reorder resources views [tiberich #4737]

4.12 - (2012-01-03)
-------------------
 * Bug fix: updated email address for jobs enquiries [tiberich #4845]

4.11 - (2011-12-16)
-------------------
 * Bug fix: fixed quickevent view [tiberich #4839]

4.10 - (2011-12-15)
-------------------
* Bug fix: Updated @@invalidate_cache browser view to use plone.app.caching
  [voineali #4689]
* Bug fix: Fixed events map JS
  [voineali #4798]

4.9 - (2011-12-07)
------------------
 * Bug fix: disabled press release text from pressroom view [ichimdav #4619]

4.8 - (2011-12-02)
------------------
* Bug fix: Made location, themes and subject language independant
  [voineali #4776]
* Bug fix: fix error that caused zope created ContentManager users not able to access site [tiberich]

4.7 - (2011-11-29)
------------------
* Bug fix: Fixed keywords widget to keep filled values if the edit form fails to
  submit due to validation errors
  [voineali #4773]
* Bug fix: fix problem caused by redirections for Manager when creating QuickEvent [tiberich #4763]

4.6 - (2011-11-28)
------------------
* Bug fix: Fixed required themes, subject and location fields for specified content-types